# local-first-common

./: .gitignore  Makefile.workspace  README.md  STANDARDS.md  install_hooks.py  pyproject.toml
scripts/: pre_commit_check.py  pre_push_check.py  sync_gitignores.py  toggle_source.py
src/local_first_common/: __init__.py  article_fetcher.py  cli.py  clipboard.py  config.py  db.py  html.py  http.py  ingestion.py  llm.py  logging.py  models.py  obsidian.py  personas.py  pydantic_ai_utils.py  readwise.py  scoring.py  security.py  testing.py  text.py  tracking.py  url.py
src/local_first_common/providers/: __init__.py  anthropic.py  base.py  deepseek.py  errors.py  gemini.py  groq.py  ollama.py
src/local_first_common/social/: __init__.py  base.py  bluesky.py  mastodon.py
tests/: conftest.py  test_article_fetcher.py  test_clipboard.py  test_db.py  test_html.py  test_http.py  test_llm.py  test_models.py  test_obsidian.py  test_personas.py  test_providers.py  test_readwise.py  test_scoring.py  test_testing.py  test_text.py  test_tracking.py  test_url.py
tests/fixtures/: sample_article.html
