[project]
name = "local-first-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jamal Hansen", email = "jamal.hansen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[project.scripts]
local-first = "local_first_common.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_first_common"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
